data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1772.wast
;; 3. **Forward Branch Execution**:    Construct a block with an internal forward `br` instruction that should resume execution after the block's `end`. This verifies if the implicit label and execution resume points are accurately managed.

(assert_invalid
  (module (func $forward-branch-execution
    (i32.const 0)
    (block (result i32) 
      (br 0 (i32.const 1)) 
      (i32.const 2)
    )
    (i32.add)
  ))
  "type mismatch"
)